<resources>
    <string name="app_name">Kahoot</string>
    <string name="gameName">KAHOOT</string>
    <string name="errorText">TextView</string>
    <string name="inputID">ID de la partida</string>
    <string name="dificultad">Dificultad</string>
    <string name="botonIniciar">Crear Partida</string>
    <string name="start_game">Iniciar</string>
    <string name="timer">00:30</string>
    <string name="pregunta_numero">Pregunta 0/0</string>
    <string name="delete_game">Finalizar</string>
</resources>