<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mustard"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorText"
            android:visibility="gone"
            android:textColor="@color/error_color"
            android:fontFamily="sans-serif" />

        <FrameLayout
            android:id="@+id/frameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inputID"
                android:fontFamily="sans-serif"
                android:background="@drawable/spinner_border"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingTop="0dp"
                    android:paddingBottom="8dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/dificultad"
            android:fontFamily="sans-serif">

            <Spinner
                android:id="@+id/spinnerDificultad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_border"
                android:fontFamily="sans-serif"
                android:spinnerMode="dropdown" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonComezar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/botonIniciar"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/button_text_color"
            android:fontFamily="sans-serif" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>